# Conversational_bot

./: .gitignore  README.md  check_audio_devices.py  cli_test.py  config.py  main.py  pyproject.toml
audio/: elevenlabs_tts.py  gtts_tts.py  stt.py  tts.py
conversation/: memory.py
data/processed/: chunks.json
data/raw/: pages.json
data/vector_store/: scraped_docs.index
embeddings/: embedder.py  vector_store.py
rag/: generator.py  retriever.py
scrape/: chunker.py  cleaner.py  pipeline.py  scraper.py  seed_urls.py
